Kubernetes/TP10/webapp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-rule
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: www.renaud-webapp.com
    http:
      paths:
      - path: /red
        backend:
          service:
            name: web-service-red
            port:
              number: 8080
        pathType: Prefix
      - path: /blue
        backend:
          service:
            name: web-service-blue
            port:
              number: 8080
        pathType: Prefix
